== 1.2.x (git)

== 1.2 2011-06-16

 === New features
  * [he|she] options for steps. (Dan Croak)
  * cc_to RSpec matcher. (Arie on github)
  * Check both html and text parts of multipart emails in Cucumber step. (Charles Barbier)
  * delivery_method is not set by email_spec to allow for SMTP (e.g. MockSMTP) delivery (Donald Piret)

 === Bugfixes
  * delivered_to matcher now compares both sender name and email address. (Jason Garber)
  * find_email now matches with_subject and with_text containing text with regex sensitive characters. Issue #31. (Curtis Miller)
  * current_email_address to work outside of the context of Cucumber. (Szymon Przybył)

== 1.1.1 2010-12-29
  * Require "action_mailer" to avoid deprecation warnings. (Ryan Bigg)
  * Relaxes pessimistic version dependency on RSpec. (GH-41 Dan Pickett)

== 1.1.0 2010-12-20

 === Bugfixes
  * anchor tags are no longer ignored when clicking links in emails (Anders Törnqist and Nicklas Ramhöj)
  * set_current_email handles cases where To to blank but may contain CC, or BCC recipients (Murray Steele)
  * Doc fixes (Florent Guilleux)


== 1.0 2010-07-31 Rails 3.0 Release
  This release makes email-spec compatible with Rails 3 and RSpec 2.x.

  IMPORTANT: As of 1.0 email-spec is no longer backwards compatible wit Rails 2.x.  I will be maintaining a 0.6
  branch on github/rubygems for Rails 2 compatibility if anyone wants new features backported.

  This was truly a community effort and I appreciate all of time and effort donated by those involved. Specifically:
    * Maxim Chernyak for the initial conversion work to Rails 3
    * Tim Harper for ironing out various matcher bugs
    * Patrick Muldoon for doing a fantastic job of cleaning up the features and specs.  He also fixed the
      DelayedJob support and worked through all the bundler issues the project was facing.

 === Bugfixes
  * Further checks for older DelayedJob versions to fix compatibility issues. (Andrea Longhi and others)

== 0.6.2 2010-03-21
