@@ -14,7 +14,7 @@ Feature: EmailSpec Example -- Prevent Bots from creating accounts
     And I am on the homepage
     And I submit my registration information
 
-  Scenario: First person signup (as myself) with two ways of opening email
+  Scenario: First person signup (as myself) with three ways of opening email
     Then I should receive an email
     And I should have 1 email
 
@@ -30,12 +30,18 @@ Feature: EmailSpec Example -- Prevent Bots from creating accounts
     And I should see "Joe Someone" in the email body
     And I should see "confirm" in the email body
 
+    # Opening email #3
+    When I open the email with subject /Account confirmation/
+    Then I should see "Account confirmation" in the email subject
+    And I should see "Joe Someone" in the email body
+    And I should see "confirm" in the email body
+
     When I follow "Click here to confirm your account!" in the email
     Then I should see "Confirm your new account"
 
     And "foo@bar.com" should have no emails
 
-  Scenario: Third person signup (emails sent to others) with two ways of opening email
+  Scenario: Third person signup (emails sent to others) with three ways of opening email
     Then "foo@bar.com" should have no emails
     And "example@example.com" should receive an email
     And "example@example.com" should have 1 email
@@ -48,6 +54,12 @@ Feature: EmailSpec Example -- Prevent Bots from creating accounts
 
     # Opening email #2
     When "example@example.com" opens the email with subject "Account confirmation"
+    Then they should see "Account confirmation" in the email subject
+    And they should see "Joe Someone" in the email body
+    And they should see "confirm" in the email body
+
+    # Opening email #3
+    When "example@example.com" opens the email with subject /Account confirmation/
     Then they should see "Account confirmation" in the email subject
     And they should see "Joe Someone" in the email body
     And they should see "confirm" in the email body
@@ -67,5 +79,15 @@ Feature: EmailSpec Example -- Prevent Bots from creating accounts
 
     # Opening email #1
     When I open the email
+    Then I should see "This is the HTML part" in the email html part body
+    And I should see "This is the text part" in the email text part body
+
+    # Opening email #2
+    When I open the email with text "This is the HTML part"
+    Then I should see "This is the HTML part" in the email html part body
+    And I should see "This is the text part" in the email text part body
+
+    # Opening email #3
+    When I open the email with text /This is the HTML part/
     Then I should see "This is the HTML part" in the email html part body
     And I should see "This is the text part" in the email text part body
