@@ -9,6 +9,6 @@ I want to verify that the example sinatra app runs all of it's features as expec
     When I run "bundle exec cucumber features -q --no-color" in the sinatra app
     Then I should see the following summary report:
     """
-    9 scenarios (5 failed, 4 passed)
-    75 steps (5 failed, 1 skipped, 69 passed)
+    12 scenarios (7 failed, 5 passed)
+    110 steps (7 failed, 1 skipped, 102 passed)
     """
