@@ -164,7 +164,7 @@ module EmailSpec
       CcTo.new(expected_email_addresses_or_objects_that_respond_to_email.flatten)
     end
 
-      RSpec::Matchers.define :have_subject do
+    RSpec::Matchers.define :have_subject do
       match do |given|
         given_subject = given.subject
         expected_subject = expected.first
@@ -185,7 +185,7 @@ module EmailSpec
       end
     end
     
-      RSpec::Matchers.define :include_email_with_subject do
+    RSpec::Matchers.define :include_email_with_subject do
       match do |given_emails|
         expected_subject = expected.first
         
@@ -205,7 +205,7 @@ module EmailSpec
       end
     end
 
-      RSpec::Matchers.define :have_body_text do
+    RSpec::Matchers.define :have_body_text do
       match do |given|
         expected_text = expected.first
         
@@ -232,7 +232,7 @@ module EmailSpec
       email_headers.fields.inject({}) { |hash, field| hash[field.field.class::FIELD_NAME] = field.to_s; hash }
     end
 
-      RSpec::Matchers.define :have_header do
+    RSpec::Matchers.define :have_header do
       match do |given|
         given_header = given.header
         expected_name, expected_value = *expected
